# Robot-Sensing-and-Navigation

./: LICENSE  README.md
Lab 0 ROS:Linux:Git Basics/: k.bethi.txt
Lab 0 ROS:Linux:Git Basics/src/: publisher_member_function.py  subscriber_member_function.py
Lab 1 GPS BU-353N/analysis/: analyse_altitude_vs_time.py  analyse_moving_altitude_vs_time.py  analyse_moving_path_error.py  analyse_position_hist.py  analyse_stationary_scatter.py
Lab 1 GPS BU-353N/data/occluded_stationary_data/: metadata.yaml  occluded_stationary__data_0.mcap
Lab 1 GPS BU-353N/data/open_data/: metadata.yaml  open_data_0.mcap
Lab 1 GPS BU-353N/data/walking_data/: metadata.yaml  walking_data_0.mcap
Lab 1 GPS BU-353N/src/gps_driver/: package.xml  setup.py
Lab 1 GPS BU-353N/src/gps_driver/gps_driver/: driver.py
Lab 1 GPS BU-353N/src/gps_msgs/: CMakeLists.txt  package.xml
Lab 1 GPS BU-353N/src/gps_msgs/msg/: GPSmsg.msg
Lab 2 RTK GPS/analysis/: analyse_moving_rtk_altitude.py  analyse_moving_rtk_path_error.py  analyse_stationary_rtk_altitude.py  analyse_stationary_rtk_position_hist.py  analyse_stationary_rtk_scatter.py  run_all_rtk_analyses.py
Lab 2 RTK GPS/data/occluded_data_rtk/: metadata.yaml  occluded_data_rtk_0.mcap
Lab 2 RTK GPS/data/open_data_rtk/: metadata.yaml  open_data_rtk_0.mcap
Lab 2 RTK GPS/data/walking_data_rtk/: metadata.yaml  walking_data_rtk_0.mcap
Lab 2 RTK GPS/src/gps_driver/: CMakeLists.txt  package.xml
Lab 2 RTK GPS/src/gps_driver/launch/: rtk_driver_launch.py
Lab 2 RTK GPS/src/gps_driver/msg/: Customrtk.msg
Lab 2 RTK GPS/src/gps_driver/python/: rtk_driver.py
Lab 3 IMU VectorNav VN100/analysis/11sec_motion/: 11sec_motion_0.csv  metadata.yaml  plot_accel_mps2.py  plot_gyro_deg.py  plot_rotation_xyz_11sec.py
Lab 3 IMU VectorNav VN100/analysis/imu_bag_1/: allan_from_csv.py
Lab 3 IMU VectorNav VN100/analysis/stationary_data_5min/: plot_accel_stationary.py  plot_gyro_stationary.py  plot_rotation_xyz.py  stationary_data_5min_0.csv
Lab 3 IMU VectorNav VN100/data/11sec_motion/: 11sec_motion_0.mcap
Lab 3 IMU VectorNav VN100/data/stationary_data_5min/: metadata.yaml
Lab 3 IMU VectorNav VN100/src/vn_driver/: CMakeLists.txt  package.xml  setup.py
Lab 3 IMU VectorNav VN100/src/vn_driver/launch/: driver.launch.py
Lab 3 IMU VectorNav VN100/src/vn_driver/resource/: vn_driver
Lab 3 IMU VectorNav VN100/src/vn_driver/scripts/: vn_driver.py
Lab 4 IMU Odometry/5m_circle/: 5m_circle_0_imu.csv  mag_calibrate_xy.py  metadata.yaml  plot_NE_from_heading.py  plot_accel_velocity_xyz.py  plot_gyroZ_mag_heading.py  plot_gyro_xy.py
Lab 4 IMU Odometry/5m_square/: 5m_square_0_imu.csv  Mag XY, raw vs calibrated.txt  metadata.yaml  plot_NE_from_accX_and_heading_square.py  plot_acc_vel_square.py  plot_gyroZ_mag_heading_square.py  plot_gyro_xy_square.py  plot_mag_square_calibration.py
