<?xml version="1.0"?>
<package format="3">
  <name>gps_msgs</name>
  <version>0.0.0</version>
  <description>Custom GNSS message definitions</description>

  <maintainer email="kiran@todo.todo">kiran</maintainer>
  <license>TODO</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time deps for generating interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime deps to use generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Tag to mark this as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

